--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "run bash scripts when you get a push event from a github webhook",
   "version": "0.0.0",
   "author": "C J Silverio <ceejceej@gmail.com>",
+  "bin": {
+    "jthoober": "server.js"
+  },
   "bugs": {
     "url": "https://github.com/ceejbot/jthoober/issues"
   },
