Probably ready for first release.
Polish off the server/handler tests.
Add the function concept to rules.
Document the func option in the readme.
Update the version of lab.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bistre": "~1.0.0",
     "bole": "~1.0.0",
     "github-webhook-handler": "~0.2.1",
+    "lab": "~4.4.3",
     "restify": "~2.8.2",
     "yargs": "~1.3.1"
   },
