--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bole": "~1.0.0",
     "github-webhook-handler": "~0.2.1",
     "lab": "~4.4.3",
+    "mkdirp": "~0.5.0",
     "restify": "~2.8.2",
     "yargs": "~1.3.1"
   },
