--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "github-webhook-handler": "~0.3.4",
     "mkdirp": "~0.5.0",
     "restify": "~2.8.3",
+    "through2": "^0.6.3",
+    "touch": "0.0.3",
     "yargs": "~1.3.3"
   },
   "devDependencies": {
     "lab": "~5.1.0",
     "must": "~0.12.0",
+    "rimraf": "^2.2.8",
     "sinon": "~1.12.1"
   },
   "homepage": "https://github.com/ceejbot/jthoober",
