--- a/package.json
+++ b/package.json
@@ -13,23 +13,6 @@
   "bugs": {
     "url": "https://github.com/ceejbot/jthoober/issues"
   },
-  "config": {
-    "blanket": {
-      "pattern": [
-        "lib",
-        "index.js",
-        "server.js"
-      ],
-      "data-cover-never": [
-        "node_modules",
-        "test"
-      ],
-      "output-reporter": "spec",
-      "travis-cov": {
-        "threshold": 90
-      }
-    }
-  },
   "dependencies": {
     "bistre": "~1.0.1",
     "bole": "~2.0.0",
@@ -37,12 +20,12 @@
     "mkdirp": "~0.5.0",
     "restify": "~3.0.1",
     "rimraf": "~2.3.2",
-    "through2": "^0.6.3",
+    "through2": "~0.6.5",
     "touch": "0.0.3",
-    "yargs": "~3.5.4"
+    "yargs": "~3.7.1"
   },
   "devDependencies": {
-    "blanket": "~1.1.6",
+    "istanbul": "~0.3.13",
     "mocha": "~2.1.0",
     "mocoverage": "~1.0.0",
     "must": "~0.12.0",
@@ -65,8 +48,8 @@
   "scripts": {
     "dev": "NODE_ENV=dev node server.js --rules ./example-rules.js --secret sooper-sekrit",
     "lint": "jshint lib/*.js *.js test/*.js",
-    "test": "mocha -t 5000 --check-leaks --ui exports --require blanket -R mocoverage test/test-*.js",
-    "test-cov": "mocha -t 5000 --require blanket -R travis-cov test/test-*.js",
-    "test-travis": "mocha -R spec -t 5000 test/test-*.js"
+    "test": "mocha -t 5000 --check-leaks --ui exports -R spec test/test-*.js",
+    "test-travis": "mocha -R spec -t 5000 test/test-*.js",
+    "coverage": "istanbul cover _mocha test --recursive -- -u exports -R spec && open coverage/lcov-report/index.html"
   }
 }
