--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "yargs": "~3.31.0"
   },
   "devDependencies": {
-    "eslint": "~1.10.1",
-    "istanbul": "~0.4.1",
+    "eslint": "~1.10.3",
     "mocha": "~2.3.4",
     "must": "~0.13.1",
+    "nyc": "~5.3.0",
     "rimraf": "~2.5.0",
     "sinon": "~1.17.2"
   },
@@ -46,8 +46,7 @@
   "scripts": {
     "dev": "NODE_ENV=dev node server.js --rules ./example-rules.js --secret sooper-sekrit",
     "lint": "eslint lib/*.js *.js test/*.js",
-    "test": "mocha -t 5000 --check-leaks --ui exports -R spec test/test-*.js",
-    "test-travis": "mocha -R spec -t 5000 test/test-*.js",
-    "coverage": "istanbul cover _mocha test --recursive -- -u exports -R spec && open coverage/lcov-report/index.html"
+    "test": "nyc mocha -t 5000 --check-leaks --ui exports -R spec test/test-*.js",
+    "travis": "npm run lint && nyc mocha -R spec -t 5000 test/test-*.js"
   }
 }
