Update deps. Add coveralls. Relax dev-dep ranges.

--- a/.eslintrc
+++ b/.eslintrc
@@ -74,7 +74,6 @@
         "no-else-return": 0,
         "no-empty": 0,
         "no-empty-character-class": 2,
-        "no-empty-label": 2,
         "no-eq-null": 0,
         "no-eval": 2,
         "no-ex-assign": 2,
@@ -93,7 +92,7 @@
         "no-irregular-whitespace": 2,
         "no-iterator": 2,
         "no-label-var": 2,
-        "no-labels": 2,
+        "no-labels": 0,
         "no-lone-blocks": 2,
         "no-lonely-if": 0,
         "no-loop-func": 0,
@@ -110,7 +109,7 @@
         "no-new-require": 2,
         "no-new-wrappers": 2,
         "no-obj-calls": 2,
-        "no-octal": 2,
+        "no-octal": 0,
         "no-octal-escape": 2,
         "no-path-concat": 0,
         "no-plusplus": 0,
@@ -154,12 +153,11 @@
         "semi": [2, "always"],
         "sort-vars": 0,
         "space-before-function-paren": [2, "never"],
-        "space-after-keywords": 0,
+        "keyword-spacing": 2,
         "space-before-blocks": [2, "always"],
         "space-in-brackets": 0,
         "space-in-parens": [2, "never"],
         "space-infix-ops": 2,
-        "space-return-throw-case": 2,
         "space-unary-ops": [2, { "words": true, "nonwords": false }],
         "strict": 0,
         "use-isnan": 2,
