--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "devDependencies": {
     "coveralls": "~2.11.6",
     "eslint": "2.11.1",
-    "mocha": "2.*",
+    "mocha": "~2.5.3",
     "must": "~0.13.1",
     "nyc": "6.4.4",
     "rimraf": "~2.5.0",
-    "sinon": "~1.17.3"
+    "sinon": "~1.17.4"
   },
   "homepage": "https://github.com/ceejbot/jthoober",
   "keywords": [
