--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.2",
   "author": "C J Silverio <ceejceej@gmail.com>",
   "bin": {
-    "jthoober": "server.js"
+    "jthoober": "bin/jthoober.js"
   },
   "bugs": {
     "url": "https://github.com/ceejbot/jthoober/issues"
@@ -16,6 +16,7 @@
   "dependencies": {
     "bistre": "~1.0.1",
     "bole": "~3.0.2",
+    "dotenv": "~4.0.0",
     "github-webhook-handler": "~0.6.0",
     "restify": "~4.3.0",
     "through2": "~2.0.3",
@@ -45,7 +46,7 @@
   },
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "dev": "NODE_ENV=dev node server.js --rules ./example-rules.js --secret sooper-sekrit",
+    "dev": "NODE_ENV=dev ./runner.js --rules ./example-rules.js --secret sooper-sekrit",
     "lint": "xo",
     "test": "nyc mocha -t 5000 --check-leaks -R spec test/test-*.js",
     "travis": "npm run lint && npm test"
@@ -53,7 +54,6 @@
   "xo": {
     "extends": "eslint-config-ceejbot",
     "rules": {
-      "prefer-arrow-callback": 0,
       "object-shorthand": 0,
       "unicorn/prefer-starts-ends-with": 0
     }
