--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "bole": "~3.0.2",
     "dotenv": "~4.0.0",
     "github-webhook-handler": "~0.6.0",
-    "restify": "~4.3.0",
+    "restify": "~5.0.1",
     "through2": "~2.0.3",
-    "touch": "~1.0.0",
     "yargs": "~8.0.2"
   },
   "devDependencies": {
@@ -28,8 +27,9 @@
     "eslint-config-ceejbot": "~1.1.0",
     "mocha": "~3.4.2",
     "must": "~0.13.4",
-    "nyc": "~11.0.2",
-    "sinon": "~2.3.5",
+    "nyc": "~11.0.3",
+    "restify-clients": "~1.5.0",
+    "sinon": "~2.3.8",
     "xo": "~0.18.2"
   },
   "homepage": "https://github.com/ceejbot/jthoober",
